// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Block Block with Markdown 1`] = `
<div
  class="h-full"
>
  <div>
    <div>
      <header
        class="text-gray-600 font-medium mb-2"
      >
        
      Futur Markdown
    
      </header>
       
      <div
        class="text-gray-600"
      >
        
  En cours d'implémentation

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with Paragraph (Text) 1`] = `
<div
  class="h-full"
>
  <div>
    <div>
      <header
        class="text-gray-600 font-medium mb-2"
      >
        
      Titre
    
      </header>
       
      <div
        class="text-gray-600"
      >
        
  Je suis un texte.

      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with TableView 1`] = `
<div
  class="h-full"
>
  <div>
    <div>
      <header
        class="text-gray-600 font-medium mb-2"
      >
        
      My TableView's block
    
      </header>
       
      <div>
        <div
          class="el-table shadow el-table--fit el-table--striped el-table--enable-row-hover el-table--enable-row-transition el-table--medium"
        >
          <div
            class="hidden-columns"
          >
            <div />
            <div />
            <div />
          </div>
          <div
            class="el-table__header-wrapper"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__header"
            >
              <colgroup />
              <thead
                class=""
              >
                <tr
                  class=""
                />
              </thead>
            </table>
          </div>
          <div
            class="el-table__body-wrapper is-scrolling-none"
          >
            <table
              border="0"
              cellpadding="0"
              cellspacing="0"
              class="el-table__body"
            >
              <colgroup />
              <tbody>
                <tr
                  class="el-table__row"
                />
                <tr
                  class="el-table__row el-table__row--striped"
                />
                <!---->
              </tbody>
            </table>
            <!---->
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div
            class="el-table__column-resize-proxy"
            style="display: none;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block with unknown type 1`] = `
<div
  class="h-full"
>
  <div>
    <div>
      <header
        class="text-gray-600 font-medium mb-2"
      >
        
      Not Known
    
      </header>
       
      <span
        class="text-gray-600"
      >
        
      Ce type de block NotKnown n'existe pas.
    
      </span>
    </div>
  </div>
</div>
`;

exports[`storyshots Block Block without props 1`] = `
<div
  class="h-full"
>
  <div>
    <span
      class="text-gray-600"
    >
      
    Le type de block n'existe pas.
  
    </span>
  </div>
</div>
`;
